--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "react-native": "0.64.2",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-crop-picker": "^0.38.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-paper": "^4.12.4",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
+    "react-native-share": "^7.9.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0"
   },
