--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/drawer": "^6.1.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.6",
+    "firebase": "^9.6.11",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-animatable": "^1.3.3",
