--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-linear-gradient": "^2.6.2",
@@ -24,6 +25,7 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
+    "react-native-select-dropdown": "^2.0.4",
     "react-native-share": "^7.9.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0"
