--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@react-navigation/native-stack": "^6.0.6",
     "firebase": "^9.6.11",
     "react": "17.0.1",
+    "react-hook-form": "^7.34.2",
     "react-native": "0.64.2",
     "react-native-animatable": "^1.3.3",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^4.12.4",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.3.0",
