--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/drawer": "^6.1.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.6",
+    "buffer": "^6.0.3",
     "firebase": "^9.6.11",
     "react": "17.0.1",
     "react-hook-form": "^7.34.2",
@@ -24,13 +25,14 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^4.12.4",
-    "react-native-reanimated": "^2.2.0",
+    "react-native-reanimated": "^1.13.4",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "react-native-select-dropdown": "^2.0.4",
     "react-native-share": "^7.9.0",
     "react-native-svg": "^12.1.1",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
