--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "^7.32.0",
     "jest": "^27.0.6",
     "metro-react-native-babel-preset": "^0.66.2",
+    "prettier": "^2.7.1",
     "react-test-renderer": "17.0.1"
   },
   "jest": {
