--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "pretty": "prettier --write 'src/**/*.js'"
   },
   "dependencies": {
     "@react-navigation/drawer": "^6.1.3",
