--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pretty": "prettier --write 'src/**/*.js'"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/drawer": "^6.1.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.6",
